--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,24 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="iutsd.android.tp2.guilleminot.myapplication.MainActivity">
+    tools:context="iutsd.android.tp2.caputo.elibraryfinal.MainActivity">
+
+    <item
+        android:id="@+id/info_button"
+        android:title="Help"
+        android:icon="@android:drawable/ic_menu_help"
+        app:showAsAction="ifRoom" />
+
+    <item
+        android:id="@+id/add_button"
+        android:title="Add a book"
+        android:icon="@android:drawable/ic_input_add"
+        app:showAsAction="ifRoom" />
+
     <item
         android:id="@+id/action_settings"
-        android:orderInCategory="100"
+        android:orderInCategory="102"
         android:title="@string/action_settings"
         app:showAsAction="never" />
+
 </menu>
